--- a/My-AI-Chat/src/app/features/chat-sidebar/chat-sidebar.component.css
+++ b/My-AI-Chat/src/app/features/chat-sidebar/chat-sidebar.component.css
@@ -1,9 +1,9 @@
 .sidebar-container {
-    height: 100vh;
+    height: 100%;
+    overflow-y: auto;
 }
 
 .sidebar {
-    width: 250px;
     padding: 1rem;
     background-color: #f1f1f1;
 }
